--- a/XUnit_Test/XUnit_Test.csproj
+++ b/XUnit_Test/XUnit_Test.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
     <PackageReference Include="Selenium.Support" Version="3.141.0" />
+    <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="74.0.3729.6-beta" />
     <PackageReference Include="SpecFlow" Version="3.0.178-beta" />
     <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.0.178-beta" />
